syntax = "proto3";

package pb;

enum Government {
  UNKNOWN_GOVERNMENT = 0;
  
  WEAK = 1;
  DEMOCRACY = 2;
  COMMUNISM = 3;
  AUTOCRACY = 4;
  COLONY = 5;
  OCCUPIED = 6;
}

enum Region {
  UNKNOWN_REGION = 0;

  WESTERN_EUROPE = 1;
  EASTERN_EUROPE = 2;
  CENTRAL_AMERICA = 3;
  SOUTH_AMERICA = 4;
  AFRICA = 5;
  MIDDLE_EAST = 6;
  SOUTH_ASIA = 7;
  EAST_ASIA = 8;

  SUPERPOWERS = 20;
}

enum ProvinceId {
  NONE = 00;

  // WEST EUROPE
  GREAT_BRITAIN = 1;
  FRANCE = 2;
  DENMARK = 3;
  NORWAY = 4;
  BENELUX = 5;
  WEST_GERMANY = 6;
  SPAIN = 7;
  PORTUGAL = 8;
  ITALY = 9;
  SWEDEN = 10;
  CANADA = 11;

  // EAST EUROPE
  EAST_GERMANY = 20;
  POLAND = 21;
  CZECHOSLOVAKIA = 22;
  HUNGARY = 23;
  YUGOSLAVIA = 24;
  GREECE = 25;
  ROMANIA = 26;
  BULGARIA = 27;
  FINLAND = 28;
  TURKEY = 29;
  ALBANIA = 30;

  // AUSTRIA
  AUSTRIA = 666;

  // CENTRAL AMERICA
  MEXICO = 41;
  GUATEMALA = 42;
  HONDURAS = 43;
  NICARAGUA = 44;
  COSTA_RICA = 45;
  PANAMA = 46;
  CUBA = 47;
  HAITI = 48;
  DOMINICAN_REP = 49;
  LESS_ANTILLES = 50;
  EL_SALVADOR = 51;
  GUYANA = 52;

  // SOUTH AMERICA
  COLOMBIA = 61;
  ECUADOR = 62;
  PERU = 63;
  CHILE = 64;
  VENEZUELA = 65;
  URUGUAY = 66;
  BRAZIL = 67;
  BOLIVIA = 68;
  ARGENTINA = 69;

  // AFRICA
  MOROCCO = 80;
  IVORY_GOLD_COAST = 81;
  WEST_AFRICA = 82;
  ALGERIA = 83;
  NIGERIA = 84;
  ZAIRE = 85;
  ANGOLA = 86;
  SOUTH_AFRICA = 87;
  MOZAMBIQUE = 88;
  EAST_AFRICA = 89;
  ETHIOPIA = 90;

  // MIDDLE EAST
  EGYPT = 100;
  ISRAEL = 101;
  SYRIA = 102;
  JORDAN = 103;
  IRAQ = 104;
  SAUDI_ARABIA = 105;
  YEMEN = 106;
  IRAN = 107;
  GULF_STATES = 108;
  LIBYA = 109;
  LEBANON = 110;

  // SOUTH ASIA
  AFGHANISTAN = 120;
  PAKISTAN = 121;
  INDIA = 122;
  BANGLADESH = 123;
  BURMA = 124;
  THAILAND = 125;
  MALAYSIA = 126;
  INDONESIA = 127;
  AUSTRALIA = 128;

  // EAST ASIA
  CHINA = 140;
  LAOS = 141;
  CAMBODIA = 142;
  VIETNAM = 143;
  PHILIPPINES = 144;
  TAIWAN = 145;
  JAPAN = 146;
  SOUTH_KOREA = 147;
  NORTH_KOREA = 148;

  // SUPERPOWERS
  USA = 998;
  USSR = 999;
}

enum Culture {
  UNKNOWN_CULTURE = 0;
  
  ENGLISH = 1;
  SPANISH = 2;
  FRENCH = 3;
  GERMAN = 4;
  PORTUGUESE = 5;
}
