syntax = "proto3";

package pb;

import "enums.proto";
import "dissidents.proto";

// ========== Ids ==========

enum ConflictType {
  UNKNOWN_CONFLICT = 0;
  CIVIL_WAR = 1;
  CONVENTIONAL_WAR = 2;
  MILITARY_ACTION = 3;
  COLONIAL_WAR = 4;
}

// ========== Settings ==========

// The top-level settings proto included in GameSettings.
// Immutable over the duration of a single game.
message ConflictsSettings {
  repeated Conflict init_active = 1;
  repeated Conflict init_dormant = 2;
  repeated Conflict init_possible = 3;
  int32 base_chance_civil = 4;
  int32 base_chance_conventional = 5;
  int32 base_chance_action = 6;
  int32 base_chance_colonial = 7;
  int32 goal_civil = 8;
  int32 goal_conventional = 9;
  int32 goal_action = 10;
  int32 goal_colonial = 11;
}

// ========== State ==========

// The top-level state proto included in GameState.
// Mutated each turn based on moves.
message ConflictsState {
  repeated Conflict active = 1;
  repeated Conflict dormant = 2;
  repeated Conflict possible = 3;
}

// The state for a single Conflict.
message Conflict {
  string name = 1;
  ConflictType type = 2;
  int32 goal = 3;
  Faction attackers = 4;
  Faction defenders = 5;
  int32 length = 6;
  int32 base_chance = 7; // Base chance
  repeated ProvinceId locations = 8;
}

message Faction {
  repeated ProvinceId ids = 1;
  Player supporter = 2; // US or USSR or Neither
  int32 progress = 3;
  Dissidents rebels = 4;
}
